listener/testdata/any-source.json
{"id":"kube.tenant-a.pol1.d3122af3-a4cc-11e7-a1ea-068bf013416e","direction":"ingress","applied_to":[{"tenant_id":"tenant-a","segment_id":"backend"}],"ingress":[{"peers":[{"peer":"any"}],"rules":[{"protocol":"tcp","ports":[80]}]}]}
