listener/testdata/any-source.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: pol1
 namespace: tenant-a
spec:
 podSelector:
  matchLabels:
   romana.io/segment: backend
 ingress:
 - from:
   ports:
    - protocol: TCP
      port: 80
