listener/testdata/default-allow-egress.json
{"id":"kube.default.allow-all.f7d06ffc-1acb-11e8-b3b2-0248633e0412","direction":"Ingress,Egress","applied_to":[{"tenant_id":"default"}],"ingress":[{"peers":[{"peer":"any"}],"rules":[{"protocol":"none"}]}],"egress":[{"peers":[{"peer":"any"}],"rules":[{"protocol":"any"}]}]}
