listener/testdata/default-allow.json
{"id":"kube.default.allow-all.27c4ef30-1acb-11e8-b3b2-0248633e0412","direction":"ingress","applied_to":[{"tenant_id":"default"}],"ingress":[{"peers":[{"peer":"any"}],"rules":[{"protocol":"any"}]}]}
