listener/testdata/default-deny-both.json
{"id":"kube.default.default-deny.bd8754f1-1aca-11e8-b3b2-0248633e0412","direction":"Ingress,Egress","applied_to":[{"tenant_id":"default"}],"ingress":[{"peers":[{"peer":"any"}],"rules":[{"protocol":"none"}]}],"egress":[{"peers":[{"peer":"any"}],"rules":[{"protocol":"none"}]}]}
