listener/testdata/default-deny-egress.json
{"id":"kube.default.default-deny.57cb336b-1ac8-11e8-b3b2-0248633e0412","direction":"egress","applied_to":[{"tenant_id":"default"}],"egress":[{"peers":[{"peer":"any"}],"rules":[{"protocol":"none"}]}]}
