listener/testdata/foreing-source-tenant.json
{"id":"kube.tenant-a.pol1.0ef621c5-a4cd-11e7-a1ea-068bf013416e","direction":"ingress","applied_to":[{"tenant_id":"tenant-a","segment_id":"backend"}],"ingress":[{"peers":[{"tenant_id":"kube-system"}],"rules":[{"protocol":"tcp","ports":[80]}]}]}
