listener/testdata/foreing-source-tenant.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: pol1
 namespace: tenant-a
spec:
 podSelector:
  matchLabels:
   romana.io/segment: backend
 ingress:
 - from:
   - namespaceSelector:
      matchLabels:
       namespace: kube-system
   ports:
    - protocol: TCP
      port: 80
