listener/testdata/no-rules.json
{"id":"kube.tenant-a.pol1.3b3f70ce-191d-11e8-b3b2-0248633e0412","direction":"ingress","applied_to":[{"tenant_id":"tenant-a","segment_id":"backend"}],"ingress":[{"peers":[{"tenant_id":"tenant-a","segment_id":"frontend"}],"rules":[{"protocol":"any"}]}]}
