listener/testdata/no-source-segment.json
{"id":"kube.tenant-a.pol1.6fd5b7e7-191d-11e8-b3b2-0248633e0412","direction":"ingress","applied_to":[{"tenant_id":"tenant-a","segment_id":"backend"}],"ingress":[{"peers":[{"tenant_id":"tenant-a","labels":{"free-range":"tenbucks"}}],"rules":[{"protocol":"tcp","ports":[80]}]}]}
