listener/testdata/no-source-segment.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: pol1
 namespace: tenant-a
spec:
 podSelector:
  matchLabels:
   romana.io/segment: backend
 ingress:
 - from:
   - podSelector:
      matchLabels:
       free-range: tenbucks
   ports:
    - protocol: TCP
      port: 80
